refactor configuration files and update usage data handling